<resources>
    <!--  App info -->
    <string translatable="false" name="app_name">UTTT</string>
    <string translatable="false" name="app_name_long">Ultimate Tic Tac Toe</string>
	<string translatable="false" name="app_name_newline">Ultimate\nTic Tac Toe</string>
	<string translatable="false" name="market_url">https://play.google.com/store/apps/details?id=com.henrykvdb.sttt</string>
	<string translatable="false" name="github_url">github.com/henrykvdb/UltimateTTTAndroid</string>
    <string translatable="false" name="admob_app_id">ca-app-pub-6464324284979557~3924211424</string>

	<!-- Extra hover-over info-->
	<string name="hov_undo">Undo</string>
	<string name="hov_nav_close">Close navigation drawer</string>
	<string name="hov_nav_open">Open navigation drawer</string>
	<string name="copied">Copied!</string>

	<!-- Online game undo request -->
	<string name="undo_request_msg">Opponent is requesting undo, accept?</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>

	<!--  Error messages -->
	<string name="toast_internet_1">Check your internet connection (1)</string>
	<string name="toast_internet_2">Check your internet connection (2)</string>
	<string name="toast_internet_3">Check your internet connection (3)</string>
	<string name="toast_online_not_joinable">Game not joinable</string>
	<string name="toast_online_not_exist">Game does not exist</string>
	<string name="toast_online_connection_ost">Connection lost</string>
	<string name="toast_cant_undo">Not enough moves</string>

	<!-- Window titles -->
	<string name="title_computer">Computer Game</string>
	<string name="title_local">Local Game</string>
	<string name="title_online">Online Game</string>

	<!-- Turn indicator -->
	<string name="turn_yours">It is your turn!</string>
	<string name="turn_enemy">The enemy is playing!</string>

	<!-- Win indicator -->
	<string name="winner_generic">%1$s won the game!</string>
	<string name="winner_you">You won!</string>
	<string name="winner_tie">It is a tie!</string>
	<string name="winner_other">You lost!</string>

	<!-- MAIN MENU: start a game -->
	<string name="menu_title_new_game">New game</string>
	<string name="menu_computer">Computer</string>
	<string name="menu_local">Local</string>
	<string name="menu_online">Online</string>

	<!-- MAIN MENU: other -->
	<string name="menu_title_others">Other</string>
	<string name="menu_feedback">Feedback</string>
	<string name="menu_remove_ads">Remove ads</string>
	<string name="menu_tutorial">Tutorial</string>
	<string name="menu_share">Share</string>
	<string name="menu_about">About</string>

	<!-- Rate dialog -->
	<string name="rate_title">Rate app</string>
	<string name="rate_message">If you enjoy using Ultimate Tic Tac Toe, please take a moment to rate it. Thanks for your support!</string>
	<string name="rate_positive">Rate</string>
	<string name="rate_neutral">Later</string>
	<string name="rate_negative">No, thanks</string>

	<!--  Dialog new game  -->
	<string name="dialog_start_game">Start</string>
	<string name="dialog_cancel">Cancel</string>
	<string name="dialog_start_player">Beginning player</string>
	<string name="dialog_start_you">You</string>
	<string name="dialog_start_other">Other</string>
	<string name="dialog_start_computer">Computer</string>
	<string name="dialog_start_random">Random</string>

	<!--  Dialog new game: Computer  -->
	<string name="new_ai_title">Start a new AI game?</string>
	<string name="new_ai_difficulty">Difficulty</string>

	<!--  Dialog new game: Local  -->
	<string name="new_local_title">Start a new game?</string>
	<string name="new_local_message">Create a new two player game</string>

	<!--  Dialog new game: Online (create) -->
	<string name="online_create">Create</string>
	<string name="online_create_sel_board">Select board</string>
	<string name="online_create_sel_board_new">Empty</string>
	<string name="online_create_sel_board_current">Current</string>
	<string name="online_create_message_wait">Press create once you are ready</string>
	<string name="online_create_message_ready">You are hosting a game, ask a friend to join &lt;b&gt;&lt;font color="#FF0000"&gt;%1$s&lt;/font&gt;&lt;/b&gt; (your game host code)</string>

	<!--  Dialog new game: Online (join) -->
	<string name="online_join">Join</string>
	<string name="online_join_code">Host code</string>
	<string name="online_join_message">Enter the host code of your opponent</string>

	<!-- Dialog about-->
	<string name="about_version">Version</string>
	<string name="about_credit_0">by Henrykvdb</string>
	<string name="about_credit_1">Special thanks to &lt;a href=https://github.com/KarelPeeters&gt;KarelPeeters&lt;/a&gt;</string>
	<string name="about_source">Source code available:</string>
	<string name="about_close">Close</string>

	<!-- Dialog feedback (title) -->
	<string name="send_feedback">Send feedback</string>

	<!-- Dialog share (body) -->
	<string name="share_title">Share with</string>
	<string name="share_message">Hey, let\'s play Ultimate Tic Tac Toe together!</string>

	<!--  Tutorial slides 0 -->
	<string name="tut0_title">Tutorial</string>
	<string name="tut0_desc">Let\'s go over the basic rules</string>

	<!--  Tutorial slides 1 -->
	<string name="tut1_title">The board</string>
	<string name="tut1_desc">Players take turns playing nine tic tac toe grids, arranged inside a bigger tic tac toe grid</string>

	<!--  Tutorial slides 2 -->
	<string name="tut2_title">Win grids</string>
	<string name="tut2_desc">Win grids by getting three in a row, like you would in regular tic tac toe</string>

	<!--  Tutorial slides 3 -->
	<string name="tut3_title">How to win</string>
	<string name="tut3_desc">Win 3 grids in a row in order to win the game</string>

	<!--  Tutorial slides 4 -->
	<string name="tut4_title">The colors</string>
	<string name="tut4_desc">The allowed moves for the next player are indicated in that player\'s color. The last move is colored slightly lighter</string>

	<!--  Tutorial slides 5 -->
	<string name="tut5_title">Allowed moves</string>
	<string name="tut5_desc">You decide where the opponent can play next. Example: If you play top right in a grid, the opponent has to play in the top right grid</string>

	<!--  Tutorial slides 6 -->
	<string name="tut6_title">Free moves</string>
	<string name="tut6_desc">If you get sent to a full or won grid you can play anywhere you want</string>

	<!--  Tutorial slides 7 -->
	<string name="tut7_title">Ways to play</string>
	<string name="tut7_desc">Challenge your friends both locally and online. Practice against the computer and try to beat it on the hardest difficulty</string>
	<string name="tut7_against">Against</string>
	<string name="tut7_ways_computer">Computer</string>
	<string name="tut7_ways_local">Local friend</string>
	<string name="tut7_ways_online">Online friend</string>
</resources>
